--- a/package.json
+++ b/package.json
@@ -4,26 +4,25 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^1.9.10",
-    "gatsby-cli": "^1.1.4",
-    "gatsby-link": "^1.6.13",
-    "gatsby-plugin-react-helmet": "^1.0.4",
-    "gatsby-plugin-sass": "^1.0.4",
-    "gatsby-source-filesystem": "^1.4.7",
-    "gatsby-transformer-remark": "^1.7.4"
+    "gatsby": "^1.9.49",
+    "gatsby-cli": "^1.1.7",
+    "gatsby-link": "^1.6.17",
+    "gatsby-plugin-react-helmet": "^1.0.6",
+    "gatsby-plugin-sass": "^1.0.12",
+    "gatsby-source-filesystem": "^1.5.1",
+    "gatsby-transformer-remark": "^1.7.15"
   },
-  "keywords": [
-    "gatsby"
-  ],
+  "keywords": ["gatsby"],
   "license": "MIT",
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
+    "format":
+      "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.6.0"
+    "prettier": "^1.7.2"
   }
 }
