--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "name": "jacob-website",
+  "description": "Jacob's personal website",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Jacob Cofman <cofman.jacob@gmail.com>",
   "dependencies": {
-    "gatsby": "^1.9.49",
-    "gatsby-cli": "^1.1.7",
-    "gatsby-link": "^1.6.17",
-    "gatsby-plugin-react-helmet": "^1.0.6",
-    "gatsby-plugin-sass": "^1.0.12",
-    "gatsby-source-filesystem": "^1.5.1",
-    "gatsby-transformer-remark": "^1.7.15"
+    "gatsby": "^1.9.130",
+    "gatsby-cli": "^1.1.27",
+    "gatsby-link": "^1.6.31",
+    "gatsby-plugin-react-helmet": "^2.0.3",
+    "gatsby-plugin-sass": "^1.0.15",
+    "gatsby-source-filesystem": "^1.5.10",
+    "gatsby-transformer-remark": "^1.7.24",
+    "react-helmet": "^5.2.0",
+    "webfontloader": "^1.6.28"
   },
   "keywords": ["gatsby"],
   "license": "MIT",
@@ -23,6 +25,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.7.2"
+    "prettier": "^1.9.1"
   }
 }
