--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "version": "1.0.0",
   "author": "Jacob Cofman <cofman.jacob@gmail.com>",
   "dependencies": {
-    "gatsby": "^1.9.130",
-    "gatsby-cli": "^1.1.27",
-    "gatsby-link": "^1.6.31",
-    "gatsby-plugin-react-helmet": "^2.0.3",
-    "gatsby-plugin-sass": "^1.0.15",
-    "gatsby-source-filesystem": "^1.5.10",
-    "gatsby-transformer-remark": "^1.7.24",
+    "gatsby": "^1.9.214",
+    "gatsby-cli": "^1.1.44",
+    "gatsby-link": "^1.6.37",
+    "gatsby-plugin-react-helmet": "^2.0.5",
+    "gatsby-plugin-sass": "^1.0.17",
+    "gatsby-source-filesystem": "^1.5.23",
+    "gatsby-transformer-remark": "^1.7.33",
     "react-helmet": "^5.2.0",
+    "serve": "^6.5.0",
     "webfontloader": "^1.6.28"
   },
   "keywords": ["gatsby"],
@@ -22,6 +23,7 @@
     "develop": "gatsby develop",
     "format":
       "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
+    "start": "serve public/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
