--- a/package.json
+++ b/package.json
@@ -4,20 +4,18 @@
   "version": "1.0.0",
   "author": "Jacob Cofman <cofman.jacob@gmail.com>",
   "dependencies": {
-    "gatsby": "^1.9.222",
-    "gatsby-cli": "^1.1.44",
+    "gatsby": "^1.9.223",
+    "gatsby-cli": "^1.1.45",
     "gatsby-link": "^1.6.38",
     "gatsby-plugin-react-helmet": "^2.0.6",
     "gatsby-plugin-sass": "^1.0.18",
-    "gatsby-source-filesystem": "^1.5.25",
+    "gatsby-source-filesystem": "^1.5.26",
     "gatsby-transformer-remark": "^1.7.34",
     "react-helmet": "^5.2.0",
     "serve": "^6.5.1",
     "webfontloader": "^1.6.28"
   },
-  "keywords": [
-    "gatsby"
-  ],
+  "keywords": ["gatsby"],
   "now": {
     "name": "jcofman",
     "alias": "jcofman.now.sh"
@@ -27,16 +25,17 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
+    "format":
+      "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
     "start": "serve public/",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "now -e NODE_ENV=production --token $NOW_TOKEN --npm --public",
+    "deploy": "now --public -e NODE_ENV=production --token $NOW_TOKEN --yarn",
     "alias": "now alias --token=$NOW_TOKEN",
     "lh": "lighthouse-ci"
   },
   "devDependencies": {
     "lighthouse-ci": "git+https://github.com/ebidel/lighthouse-ci.git",
     "now": "^10.1.4",
-    "prettier": "^1.10.2"
+    "prettier": "^1.11.1"
   }
 }
