--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,9 @@ before_install:
   - sudo apt-get install -y xclip
   - sudo apt-get install -y xsel
 script: 
-  - echo "Hallo Welt" | xsel -bi 
-  - xsel -bo 
+  - echo $DISPLAY
+  - DISPLAY=:0 echo "Hallo Welt" | xsel -bi 
+  - DISPLAY=:0 xsel -bo 
   - npm run deploy
   - NOW_URL=xsel --clipboard --output
   # store deployment url from clipboard into the deployment url 
