this should fix deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,21 +2,9 @@ language: node_js
 node_js:
 - node
 cache: npm
-addons:
-  apt:
-    packages:
-      - xclip
-      - xsel
-before_install:
-  - sudo apt-get -qq update
-  - sudo apt-get install -y xclip
-  - sudo apt-get install -y xsel
+
 script: 
-  - echo $DISPLAY
-  - DISPLAY=:0 echo "Hallo Welt" | xsel -bi 
-  - DISPLAY=:0 xsel -bo 
-  - npm run deploy
-  - NOW_URL=xsel --clipboard --output
+  - export NOW_URL=`npm run deploy`
   # store deployment url from clipboard into the deployment url 
 after_script: 
   # https://graysonkoonce.com/getting-the-current-branch-name-during-a-pull-request-in-travis-ci/
