added test script into yaml and updated dependencies

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "version": "1.0.0",
   "author": "Jacob Cofman <cofman.jacob@gmail.com>",
   "dependencies": {
-    "gatsby": "^1.9.232",
-    "gatsby-cli": "^1.1.45",
+    "gatsby": "^1.9.237",
+    "gatsby-cli": "^1.1.46",
     "gatsby-link": "^1.6.39",
-    "gatsby-plugin-react-helmet": "^2.0.7",
-    "gatsby-plugin-sass": "^1.0.21",
+    "gatsby-plugin-react-helmet": "^2.0.8",
+    "gatsby-plugin-sass": "^1.0.23",
     "gatsby-source-filesystem": "^1.5.27",
-    "gatsby-transformer-remark": "^1.7.36",
+    "gatsby-transformer-remark": "^1.7.37",
     "react-helmet": "^5.2.0",
     "serve": "^6.5.3",
     "webfontloader": "^1.6.28"
@@ -34,18 +34,19 @@
     "lh": "lighthouse-ci"
   },
   "devDependencies": {
+    "bundlesize": "^0.16.0",
     "lighthouse-ci": "git+https://github.com/ebidel/lighthouse-ci.git",
     "now": "^10.1.6",
     "prettier": "^1.11.1"
   },
   "bundlesize": [
     {
-      "path": "./build/*.js",
-      "maxSize": "250 kB"
+      "path": "./public/*.js",
+      "maxSize": "100 kB"
     },
     {
-      "path": "./build/*.css",
-      "maxSize": "50 kB"
+      "path": "./public/*.css",
+      "maxSize": "10 kB"
     }
   ]
 }
