--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
 cache: npm
 
 script: 
+  - npm test
   - NOW_URL="$(now --public -e NODE_ENV=production --token $NOW_TOKEN --yarn)"
   - echo $NOW_URL
   # store deployment url from clipboard into the deployment url 
