--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "gatsby-plugin-nprogress": "^2.0.5",
     "gatsby-plugin-react-helmet": "3.0.0",
     "gatsby-plugin-styled-components": "3.0.0",
-    "gatsby-plugin-svgr": "^1.0.1",
+    "gatsby-plugin-svgr": "^2.0.0-alpha",
     "gatsby-plugin-webpack-bundle-analyzer": "1.0.3",
     "gatsby-source-filesystem": "2.0.5",
     "gatsby-transformer-remark": "2.1.9",
@@ -30,6 +30,7 @@
     "bundlesize": "^0.17.0",
     "lighthouse-ci": "git+https://github.com/ebidel/lighthouse-ci.git",
     "now": "^11.4.6",
+    "npm-run-all": "^4.1.3",
     "prettier": "^1.14.3",
     "size-limit": "^0.20.1",
     "webpagetest": "^0.3.9"
@@ -48,7 +49,9 @@
     "dev": "gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
     "start": "serve public/",
-    "test": "bundlesize && size-limit",
+    "test:size": "npm-run-all -p test:size:bundlesize test:size:size-limit",
+    "test:size:bundlesize": "bundlesize",
+    "test:size:size-limit": "size-limit",
     "deploy": "now --public -e NODE_ENV=production --token $NOW_TOKEN --yarn",
     "alias": "now alias --token=$NOW_TOKEN",
     "lh": "lighthouse-ci --score=90 --performance=90 --pwa=90 --accessibility=90 --best-practice=90 --seo=90"
@@ -56,18 +59,14 @@
   "bundlesize": [
     {
       "path": "./public/component*.js",
-      "maxSize": "55 kB"
-    },
-    {
-      "path": "./public/*.css",
-      "maxSize": "10 kB"
+      "maxSize": "100 kB"
     }
   ],
   "size-limit": [
     {
       "path": "./public/*.js",
       "webpack": false,
-      "limit": "250 KB"
+      "limit": "500 KB"
     }
   ]
 }
