--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
 - node
+cache:
+  directories:
+    - "node_modules" # This will tell Travis CI to cache the dependencies
 install:
   - yarn
 
