--- a/package.json
+++ b/package.json
@@ -4,29 +4,30 @@
   "version": "1.0.0",
   "author": "Jacob Cofman <cofman.jacob@gmail.com>",
   "dependencies": {
-    "babel-plugin-styled-components": "^1.8.0",
+    "babel-plugin-styled-components": "^1.9.2",
     "eslint-plugin-react-hooks": "^0.0.0",
-    "gatsby": "2.0.41",
-    "gatsby-cli": "2.4.5",
-    "gatsby-plugin-nprogress": "^2.0.6",
-    "gatsby-plugin-react-helmet": "3.0.1",
+    "gatsby": "2.0.56",
+    "gatsby-cli": "2.4.6",
+    "gatsby-plugin-nprogress": "^2.0.7",
+    "gatsby-plugin-react-helmet": "3.0.3",
     "gatsby-plugin-react-svg": "^2.0.0",
-    "gatsby-plugin-styled-components": "3.0.1",
+    "gatsby-plugin-styled-components": "3.0.4",
     "gatsby-plugin-webpack-bundle-analyzer": "1.0.3",
-    "gatsby-source-filesystem": "2.0.8",
-    "gatsby-transformer-remark": "2.1.12",
-    "react": "^16.7.0-alpha.0",
-    "react-dom": "^16.7.0-alpha.0",
+    "gatsby-source-filesystem": "2.0.10",
+    "gatsby-transformer-remark": "2.1.14",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.2.2",
-    "react-pose": "^4.0.1",
-    "serve": "^10.0.2",
-    "styled-components": "^4.0.3",
+    "react-pose": "^4.0.2",
+    "react-pose-text": "^3.1.0",
+    "serve": "^10.1.1",
+    "styled-components": "^4.1.1",
     "styled-theming": "^2.2.0",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@octokit/rest": "^15.16.1",
+    "@octokit/rest": "^16.1.0",
     "babel-eslint": "^10.0.1",
     "bundlesize": "^0.17.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -35,19 +36,15 @@
     "eslint-plugin-react": "^7.11.1",
     "gatsby-plugin-eslint": "^2.0.1",
     "lighthouse-ci": "git+https://github.com/ebidel/lighthouse-ci.git",
-    "now": "^12.0.1",
-    "npm-run-all": "^4.1.3",
-    "prettier": "^1.15.1",
+    "now": "^12.1.7",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.15.2",
     "size-limit": "^0.21.0",
     "webpagetest": "^0.3.9"
   },
   "keywords": [
     "gatsby"
   ],
-  "now": {
-    "name": "jcofman",
-    "alias": "jcofman.now.sh"
-  },
   "license": "MIT",
   "main": "n/a",
   "scripts": {
@@ -58,8 +55,8 @@
     "test:size": "npm-run-all -p test:size:bundlesize test:size:size-limit",
     "test:size:bundlesize": "bundlesize",
     "test:size:size-limit": "size-limit",
-    "now-build": "echo 'Built on Travis CI'",
-    "deploy": "now --public -e NODE_ENV=production --token $NOW_TOKEN --yarn",
+    "now-build": "build",
+    "deploy": "now -e NODE_ENV=production --token $NOW_TOKEN --yarn",
     "alias": "now alias --token=$NOW_TOKEN",
     "lh": "lighthouse-ci --score=90 --performance=90 --pwa=90 --accessibility=90 --best-practice=90 --seo=90"
   },
