--- a/package.json
+++ b/package.json
@@ -1,45 +1,58 @@
 {
   "name": "jacob-website",
   "description": "Jacob's personal website",
+  "private": true,
   "version": "1.0.0",
   "author": "Jacob Cofman <cofman.jacob@gmail.com>",
+  "homepage": "https://jcofman.de",
+  "bugs": {
+    "url": "https://github.com/JCofman/jc-website/issues"
+  },
   "dependencies": {
-    "babel-plugin-styled-components": "^1.9.2",
+    "babel-plugin-styled-components": "^1.10.0",
     "eslint-plugin-react-hooks": "^0.0.0",
-    "gatsby": "2.0.56",
-    "gatsby-cli": "2.4.6",
-    "gatsby-plugin-nprogress": "^2.0.7",
-    "gatsby-plugin-react-helmet": "3.0.3",
+    "gatsby": "2.0.91",
+    "gatsby-cli": "2.4.8",
+    "gatsby-image": "^2.0.26",
+    "gatsby-plugin-manifest": "^2.0.13",
+    "gatsby-plugin-offline": "^2.0.21",
+    "gatsby-plugin-react-helmet": "3.0.5",
     "gatsby-plugin-react-svg": "^2.0.0",
+    "gatsby-plugin-sharp": "^2.0.17",
     "gatsby-plugin-styled-components": "3.0.4",
-    "gatsby-plugin-webpack-bundle-analyzer": "1.0.3",
-    "gatsby-source-filesystem": "2.0.10",
-    "gatsby-transformer-remark": "2.1.14",
-    "react": "^16.7.0-alpha.2",
-    "react-dom": "^16.7.0-alpha.2",
+    "gatsby-plugin-webpack-bundle-analyzer": "1.0.4",
+    "gatsby-remark-images": "^3.0.1",
+    "gatsby-source-filesystem": "2.0.16",
+    "gatsby-transformer-remark": "2.2.0",
+    "gatsby-transformer-sharp": "^2.1.10",
+    "react": "^16.8.0-alpha.0",
+    "react-dom": "^16.8.0-alpha.0",
     "react-helmet": "^5.2.0",
-    "react-icons": "^3.2.2",
-    "react-pose": "^4.0.2",
+    "react-icons": "^3.3.0",
+    "react-pose": "^4.0.5",
     "react-pose-text": "^3.1.0",
     "serve": "^10.1.1",
-    "styled-components": "^4.1.1",
+    "styled-components": "^4.1.3",
     "styled-theming": "^2.2.0",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@octokit/rest": "^16.1.0",
+    "@octokit/rest": "^16.10.0",
     "babel-eslint": "^10.0.1",
     "bundlesize": "^0.17.0",
+    "cypress": "^3.1.4",
+    "cypress-testing-library": "^2.3.5",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
-    "gatsby-plugin-eslint": "^2.0.1",
-    "lighthouse-ci": "git+https://github.com/ebidel/lighthouse-ci.git",
-    "now": "^12.1.7",
+    "eslint-plugin-react": "^7.12.4",
+    "gatsby-plugin-eslint": "^2.0.3",
+    "lighthouse-ci": "1.3.1",
+    "now": "^13.1.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.15.2",
-    "size-limit": "^0.21.0",
+    "prettier": "^1.16.0",
+    "size-limit": "^0.21.1",
+    "start-server-and-test": "^1.7.11",
     "webpagetest": "^0.3.9"
   },
   "keywords": [
@@ -52,9 +65,14 @@
     "dev": "gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
     "start": "serve public/",
+    "start:ci": "serve --no-clipboard --listen 8899",
     "test:size": "npm-run-all -p test:size:bundlesize test:size:size-limit",
     "test:size:bundlesize": "bundlesize",
     "test:size:size-limit": "size-limit",
+    "test:e2e:ci": "start-server-and-test start:ci http://localhost:8000 cy:run",
+    "test:e2e:dev": "start-server-and-test dev http://localhost:8000 cy:dev",
+    "cy:run": "cypress run",
+    "cy:dev": "cypress open",
     "now-build": "build",
     "deploy": "now -e NODE_ENV=production --token $NOW_TOKEN --yarn",
     "alias": "now alias --token=$NOW_TOKEN",
