update about me

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
   "workbench.colorCustomizations": {
     "titleBar.activeBackground": "#4A90E2",
     "titleBar.inactiveBackground": "#4A90E2"
+  },
+  "files.associations": {
+    "*.md": "mdx"
   }
 }
