update dependencies and add logo on scroll animation

--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
   "settings": {
     "react": {
       "pragma": "React",
-      "version": "16.6.6"
+      "version": "detect"
     }
   },
   "plugins": ["react-hooks"],
