--- a/package.json
+++ b/package.json
@@ -9,51 +9,52 @@
     "url": "https://github.com/JCofman/jc-website/issues"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^0.16.6",
-    "@mdx-js/tag": "^0.16.6",
+    "@mdx-js/mdx": "^0.16.8",
+    "@mdx-js/tag": "^0.16.8",
     "babel-plugin-styled-components": "^1.10.0",
     "eslint-plugin-react-hooks": "^0.0.0",
-    "gatsby": "2.0.91",
+    "gatsby": "2.0.98",
     "gatsby-cli": "2.4.8",
-    "gatsby-image": "^2.0.26",
+    "gatsby-image": "^2.0.28",
     "gatsby-mdx": "^0.3.5",
     "gatsby-plugin-manifest": "^2.0.13",
     "gatsby-plugin-offline": "^2.0.21",
     "gatsby-plugin-react-helmet": "3.0.5",
     "gatsby-plugin-react-svg": "^2.0.0",
-    "gatsby-plugin-sharp": "^2.0.17",
+    "gatsby-plugin-sharp": "^2.0.18",
     "gatsby-plugin-styled-components": "3.0.4",
     "gatsby-plugin-webpack-bundle-analyzer": "1.0.4",
     "gatsby-remark-images": "^3.0.1",
-    "gatsby-source-filesystem": "2.0.16",
+    "gatsby-source-filesystem": "2.0.17",
     "gatsby-transformer-remark": "2.2.0",
-    "gatsby-transformer-sharp": "^2.1.10",
+    "gatsby-transformer-sharp": "^2.1.12",
     "react": "^16.8.0-alpha.0",
     "react-dom": "^16.8.0-alpha.0",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.3.0",
-    "react-pose": "^4.0.5",
+    "react-pose": "^4.0.6",
     "react-pose-text": "^3.1.0",
     "serve": "^10.1.1",
     "styled-components": "^4.1.3",
     "styled-theming": "^2.2.0",
+    "the-platform": "^0.9.3",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@octokit/rest": "^16.10.0",
+    "@octokit/rest": "^16.13.13",
     "babel-eslint": "^10.0.1",
-    "bundlesize": "^0.17.0",
+    "bundlesize": "^0.17.1",
     "cypress": "^3.1.4",
     "cypress-testing-library": "^2.3.5",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-import": "^2.15.0",
+    "eslint-plugin-jsx-a11y": "^6.2.0",
     "eslint-plugin-react": "^7.12.4",
     "gatsby-plugin-eslint": "^2.0.3",
     "lighthouse-ci": "1.3.1",
     "now": "^13.1.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.16.0",
+    "prettier": "^1.16.1",
     "size-limit": "^0.21.1",
     "start-server-and-test": "^1.7.11",
     "webpagetest": "^0.3.9"
@@ -76,7 +77,6 @@
     "test:e2e:dev": "start-server-and-test dev http://localhost:8000 cy:dev",
     "cy:run": "cypress run",
     "cy:dev": "cypress open",
-    "now-build": "build",
     "deploy": "now -e NODE_ENV=production --token $NOW_TOKEN --yarn",
     "alias": "now alias --token=$NOW_TOKEN",
     "lh": "lighthouse-ci --score=90 --performance=90 --pwa=90 --accessibility=90 --best-practice=90 --seo=90"
