--- a/package.json
+++ b/package.json
@@ -13,23 +13,23 @@
     "@mdx-js/tag": "^0.16.8",
     "babel-plugin-styled-components": "^1.10.0",
     "eslint-plugin-react-hooks": "^0.0.0",
-    "gatsby": "2.0.98",
+    "gatsby": "2.0.103",
     "gatsby-cli": "2.4.8",
-    "gatsby-image": "^2.0.28",
+    "gatsby-image": "^2.0.29",
     "gatsby-mdx": "^0.3.5",
-    "gatsby-plugin-manifest": "^2.0.13",
-    "gatsby-plugin-offline": "^2.0.21",
+    "gatsby-plugin-manifest": "^2.0.14",
+    "gatsby-plugin-offline": "^2.0.22",
     "gatsby-plugin-react-helmet": "3.0.5",
     "gatsby-plugin-react-svg": "^2.0.0",
     "gatsby-plugin-sharp": "^2.0.18",
     "gatsby-plugin-styled-components": "3.0.4",
     "gatsby-plugin-webpack-bundle-analyzer": "1.0.4",
     "gatsby-remark-images": "^3.0.1",
-    "gatsby-source-filesystem": "2.0.17",
-    "gatsby-transformer-remark": "2.2.0",
+    "gatsby-source-filesystem": "2.0.18",
+    "gatsby-transformer-remark": "2.2.1",
     "gatsby-transformer-sharp": "^2.1.12",
-    "react": "^16.8.0-alpha.0",
-    "react-dom": "^16.8.0-alpha.0",
+    "react": "^16.8.0-alpha.1",
+    "react-dom": "^16.8.0-alpha.1",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.3.0",
     "react-pose": "^4.0.6",
@@ -37,11 +37,10 @@
     "serve": "^10.1.1",
     "styled-components": "^4.1.3",
     "styled-theming": "^2.2.0",
-    "the-platform": "^0.9.3",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@octokit/rest": "^16.13.13",
+    "@octokit/rest": "^16.13.3",
     "babel-eslint": "^10.0.1",
     "bundlesize": "^0.17.1",
     "cypress": "^3.1.4",
@@ -51,7 +50,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.0",
     "eslint-plugin-react": "^7.12.4",
     "gatsby-plugin-eslint": "^2.0.3",
-    "lighthouse-ci": "1.3.1",
+    "lighthouse-ci": "1.4.0",
     "now": "^13.1.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.16.1",
@@ -77,7 +76,8 @@
     "test:e2e:dev": "start-server-and-test dev http://localhost:8000 cy:dev",
     "cy:run": "cypress run",
     "cy:dev": "cypress open",
-    "deploy": "now -e NODE_ENV=production --token $NOW_TOKEN --yarn",
+    "deploy:ci": "now --token $NOW_TOKEN ./public  --local-config=../now.json ",
+    "deploy": "now ./public --local-config=../now.json",
     "alias": "now alias --token=$NOW_TOKEN",
     "lh": "lighthouse-ci --score=90 --performance=90 --pwa=90 --accessibility=90 --best-practice=90 --seo=90"
   },
