--- a/package.json
+++ b/package.json
@@ -76,10 +76,9 @@
     "test:e2e:dev": "start-server-and-test dev http://localhost:8000 cy:dev",
     "cy:run": "cypress run",
     "cy:dev": "cypress open",
-    "deploy:ci": "now --token $NOW_TOKEN ./public  --local-config=../now.json ",
     "deploy": "now ./public --local-config=../now.json",
     "alias": "now alias --token=$NOW_TOKEN",
-    "lh": "lighthouse-ci --score=90 --performance=90 --pwa=90 --accessibility=90 --best-practice=90 --seo=90"
+    "lighthouse": "lighthouse-ci --score=90 --performance=90 --pwa=90 --accessibility=90 --best-practice=90 --seo=90"
   },
   "bundlesize": [
     {
