add typography to load used font

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-react-svg": "^2.0.0",
     "gatsby-plugin-sharp": "^2.0.19",
     "gatsby-plugin-styled-components": "3.0.4",
+    "gatsby-plugin-typography": "^2.2.6",
     "gatsby-plugin-webpack-bundle-analyzer": "1.0.4",
     "gatsby-remark-images": "^3.0.1",
     "gatsby-source-filesystem": "2.0.18",
@@ -34,26 +35,27 @@
     "react-icons": "^3.3.0",
     "react-pose": "^4.0.6",
     "react-pose-text": "^3.1.0",
+    "react-typography": "^0.16.18",
     "serve": "^10.1.1",
     "styled-components": "^4.1.3",
     "styled-theming": "^2.2.0",
-    "webfontloader": "^1.6.28"
+    "typography": "^0.16.18"
   },
   "devDependencies": {
-    "@octokit/rest": "^16.13.3",
+    "@octokit/rest": "^16.13.4",
     "babel-eslint": "^10.0.1",
     "bundlesize": "^0.17.1",
     "cypress": "^3.1.4",
     "cypress-testing-library": "^2.3.5",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.15.0",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.0",
     "eslint-plugin-react": "^7.12.4",
     "gatsby-plugin-eslint": "^2.0.3",
     "lighthouse-ci": "1.4.0",
     "now": "^13.1.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.16.1",
+    "prettier": "^1.16.2",
     "size-limit": "^0.21.1",
     "start-server-and-test": "^1.7.11",
     "webpagetest": "^0.3.9"
