add robots txt fix seo and accessibilty issues

--- a/package.json
+++ b/package.json
@@ -13,22 +13,29 @@
     "@mdx-js/tag": "^0.16.8",
     "babel-plugin-styled-components": "^1.10.0",
     "eslint-plugin-react-hooks": "^0.0.0",
-    "gatsby": "2.0.106",
+    "gatsby": "2.0.111",
     "gatsby-cli": "2.4.8",
     "gatsby-image": "^2.0.29",
     "gatsby-mdx": "^0.3.5",
-    "gatsby-plugin-manifest": "^2.0.15",
+    "gatsby-plugin-feed": "^2.0.13",
+    "gatsby-plugin-google-analytics": "^2.0.13",
+    "gatsby-plugin-manifest": "^2.0.17",
     "gatsby-plugin-offline": "^2.0.22",
-    "gatsby-plugin-react-helmet": "3.0.5",
+    "gatsby-plugin-react-helmet": "3.0.6",
     "gatsby-plugin-react-svg": "^2.0.0",
-    "gatsby-plugin-sharp": "^2.0.19",
-    "gatsby-plugin-styled-components": "3.0.4",
-    "gatsby-plugin-typography": "^2.2.6",
+    "gatsby-plugin-robots-txt": "^1.4.0",
+    "gatsby-plugin-sharp": "^2.0.20",
+    "gatsby-plugin-styled-components": "3.0.5",
+    "gatsby-plugin-typography": "^2.2.7",
     "gatsby-plugin-webpack-bundle-analyzer": "1.0.4",
-    "gatsby-remark-images": "^3.0.1",
-    "gatsby-source-filesystem": "2.0.18",
-    "gatsby-transformer-remark": "2.2.2",
+    "gatsby-remark-images": "^3.0.3",
+    "gatsby-remark-prismjs": "^3.2.4",
+    "gatsby-remark-responsive-iframe": "^2.0.9",
+    "gatsby-remark-smartypants": "^2.0.8",
+    "gatsby-source-filesystem": "2.0.20",
+    "gatsby-transformer-remark": "^2.2.3",
     "gatsby-transformer-sharp": "^2.1.13",
+    "prismjs": "^1.15.0",
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1",
     "react-helmet": "^5.2.0",
@@ -42,20 +49,26 @@
     "typography": "^0.16.18"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
     "@octokit/rest": "^16.13.4",
+    "@storybook/addon-actions": "^4.1.11",
+    "@storybook/addon-links": "^4.1.11",
+    "@storybook/addons": "^4.1.11",
+    "@storybook/react": "^4.1.11",
     "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
     "bundlesize": "^0.17.1",
-    "cypress": "^3.1.4",
+    "cypress": "^3.1.5",
     "cypress-testing-library": "^2.3.5",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.0",
     "eslint-plugin-react": "^7.12.4",
-    "gatsby-plugin-eslint": "^2.0.3",
-    "lighthouse-ci": "1.4.0",
+    "gatsby-plugin-eslint": "^2.0.4",
+    "lighthouse-ci": "1.4.1",
     "now": "^13.1.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.16.2",
+    "prettier": "^1.16.3",
     "size-limit": "^0.21.1",
     "start-server-and-test": "^1.7.11",
     "webpagetest": "^0.3.9"
@@ -66,8 +79,9 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "build": "gatsby build",
-    "dev": "gatsby develop",
+    "build": "PUBLISH_ON_NOW=branch-deploy gatsby build",
+    "build:production": "PUBLISH_ON_NOW=production gatsby build",
+    "dev": "PUBLISH_ON_NOW=branch-deploy gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
     "start": "serve public/",
     "start:ci": "serve --no-clipboard --listen 8899",
@@ -80,7 +94,9 @@
     "cy:dev": "cypress open",
     "deploy": "now ./public --local-config=../now.json",
     "alias": "now alias --token=$NOW_TOKEN",
-    "lighthouse": "lighthouse-ci --score=90 --performance=90 --pwa=90 --accessibility=90 --best-practice=90 --seo=90"
+    "lighthouse": "lighthouse-ci --score=90 --performance=90 --pwa=90 --accessibility=90 --best-practice=90 --seo=90",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "bundlesize": [
     {
