--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,13 @@ node_js:
 cache:
   directories:
     - 'node_modules' # This will tell Travis CI to cache the dependencies
+services:
+  - docker
+
+#check repo on vulnerabilities
+before_install:
+  - docker run --rm --name=gitleaks zricethezav/gitleaks -v -r  https://github.com/JCofman/jc-website.git
+
 install:
   - yarn
 
