--- a/package.json
+++ b/package.json
@@ -104,6 +104,10 @@
   "bundlesize": [
     {
       "path": "./public/component*.js",
+      "maxSize": "10 kB"
+    },
+    {
+      "path": "./public/app*.js",
       "maxSize": "100 kB"
     }
   ],
