--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-robots-txt": "^1.4.0",
     "gatsby-plugin-sharp": "^2.0.20",
     "gatsby-plugin-styled-components": "3.0.5",
+    "gatsby-plugin-svgr": "^2.0.1",
     "gatsby-plugin-typography": "^2.2.7",
     "gatsby-plugin-webpack-bundle-analyzer": "1.0.4",
     "gatsby-remark-images": "^3.0.3",
