--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "cy:dev": "cypress open",
     "deploy": "now ./public --local-config=../now.json",
     "alias": "now alias --token=$NOW_TOKEN",
-    "lighthouse": "lighthouse-ci --score=90 --performance=90 --pwa=90 --accessibility=90 --best-practice=90 --seo=90",
+    "lighthouse": "lighthouse-ci https://jcofman.now.sh --score=90 --performance=85 --pwa=90 --accessibility=90 --best-practice=90 --seo=90",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
