--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@mdx-js/mdx": "^0.16.8",
     "@mdx-js/tag": "^0.16.8",
     "babel-plugin-styled-components": "^1.10.0",
-    "eslint-plugin-react-hooks": "^0.0.0",
+    "eslint-plugin-react-hooks": "^1.0.1",
     "gatsby": "2.0.111",
-    "gatsby-cli": "2.4.8",
+    "gatsby-cli": "2.4.9",
     "gatsby-image": "^2.0.29",
     "gatsby-mdx": "^0.3.5",
     "gatsby-plugin-feed": "^2.0.13",
@@ -34,16 +34,18 @@
     "gatsby-remark-responsive-iframe": "^2.0.9",
     "gatsby-remark-smartypants": "^2.0.8",
     "gatsby-source-filesystem": "2.0.20",
+    "gatsby-transformer-json": "^2.1.8",
     "gatsby-transformer-remark": "^2.2.3",
     "gatsby-transformer-sharp": "^2.1.13",
     "prismjs": "^1.15.0",
-    "react": "^16.8.0-alpha.1",
-    "react-dom": "^16.8.0-alpha.1",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.3.0",
     "react-pose": "^4.0.6",
+    "react-simple-maps": "^0.12.1",
     "react-typography": "^0.16.18",
-    "serve": "^10.1.1",
+    "serve": "^10.1.2",
     "styled-components": "^4.1.3",
     "styled-theming": "^2.2.0",
     "typography": "^0.16.18"
