--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "serve": "^10.1.2",
     "styled-components": "^4.1.3",
     "styled-theming": "^2.2.0",
+    "typeface-raleway": "^0.0.54",
     "typography": "^0.16.18"
   },
   "devDependencies": {
