--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-react-svg": "^2.0.0",
     "gatsby-plugin-robots-txt": "^1.4.0",
     "gatsby-plugin-sharp": "^2.0.20",
+    "gatsby-plugin-sitemap": "^2.0.5",
     "gatsby-plugin-styled-components": "3.0.5",
     "gatsby-plugin-svgr": "^2.0.1",
     "gatsby-plugin-typography": "^2.2.7",
