--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^0.17.5",
     "@mdx-js/tag": "^0.17.5",
+    "axios": "^0.18.0",
     "babel-plugin-styled-components": "^1.10.0",
     "eslint-plugin-react-hooks": "^1.0.2",
     "gatsby": "2.1.2",
