--- a/package.json
+++ b/package.json
@@ -13,36 +13,36 @@
     "@mdx-js/tag": "^0.20.3",
     "axios": "^0.18.0",
     "babel-plugin-styled-components": "^1.10.0",
-    "eslint-plugin-react-hooks": "^1.5.1",
-    "gatsby": "2.1.34",
-    "gatsby-cli": "2.4.16",
-    "gatsby-image": "^2.0.33",
-    "gatsby-mdx": "^0.4.3",
-    "gatsby-plugin-feed": "^2.0.15",
+    "eslint-plugin-react-hooks": "^1.6.0",
+    "gatsby": "2.2.8",
+    "gatsby-cli": "2.4.17",
+    "gatsby-image": "^2.0.34",
+    "gatsby-mdx": "^0.4.4",
+    "gatsby-plugin-feed": "^2.1.0",
     "gatsby-plugin-google-analytics": "^2.0.17",
     "gatsby-plugin-manifest": "^2.0.24",
     "gatsby-plugin-offline": "^2.0.25",
-    "gatsby-plugin-react-helmet": "3.0.9",
-    "gatsby-plugin-react-svg": "^2.1.0",
+    "gatsby-plugin-react-helmet": "3.0.10",
+    "gatsby-plugin-react-svg": "^2.1.1",
     "gatsby-plugin-robots-txt": "^1.4.0",
-    "gatsby-plugin-sharp": "^2.0.28",
-    "gatsby-plugin-sitemap": "^2.0.9",
+    "gatsby-plugin-sharp": "^2.0.30",
+    "gatsby-plugin-sitemap": "^2.0.10",
     "gatsby-plugin-styled-components": "^3.0.7",
-    "gatsby-plugin-svgr": "^2.0.1",
+    "gatsby-plugin-svgr": "^2.0.2",
     "gatsby-plugin-typography": "^2.2.10",
-    "gatsby-plugin-webpack-bundle-analyzer": "1.0.4",
+    "gatsby-plugin-webpack-bundle-analyzer": "^1.0.4",
     "gatsby-remark-embed-video": "^1.7.1",
-    "gatsby-remark-images": "^3.0.9",
-    "gatsby-remark-prismjs": "^3.2.5",
-    "gatsby-remark-responsive-iframe": "^2.1.0",
+    "gatsby-remark-images": "^3.0.10",
+    "gatsby-remark-prismjs": "^3.2.6",
+    "gatsby-remark-responsive-iframe": "^2.1.1",
     "gatsby-remark-smartypants": "^2.0.9",
     "gatsby-source-filesystem": "2.0.26",
-    "gatsby-transformer-json": "^2.1.10",
-    "gatsby-transformer-remark": "^2.3.4",
+    "gatsby-transformer-json": "^2.1.11",
+    "gatsby-transformer-remark": "^2.3.8",
     "gatsby-transformer-sharp": "^2.1.17",
     "prismjs": "^1.15.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.5.0",
     "react-pose": "^4.0.8",
@@ -55,16 +55,16 @@
     "typography": "^0.16.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@octokit/rest": "^16.18.1",
-    "@storybook/addon-actions": "^5.0.1",
-    "@storybook/addon-links": "^5.0.1",
-    "@storybook/addons": "^5.0.1",
-    "@storybook/react": "^5.0.1",
+    "@babel/core": "^7.4.0",
+    "@octokit/rest": "^16.20.0",
+    "@storybook/addon-actions": "^5.0.3",
+    "@storybook/addon-links": "^5.0.3",
+    "@storybook/addons": "^5.0.3",
+    "@storybook/react": "^5.0.3",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "bundlesize": "^0.17.1",
-    "cypress": "^3.1.5",
+    "cypress": "^3.2.0",
     "cypress-testing-library": "^2.3.6",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
@@ -72,11 +72,11 @@
     "eslint-plugin-react": "^7.12.4",
     "gatsby-plugin-eslint": "^2.0.4",
     "lighthouse-ci": "1.4.1",
-    "now": "^14.0.3",
+    "now": "^14.2.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.16.4",
     "size-limit": "^0.21.1",
-    "start-server-and-test": "^1.7.11",
+    "start-server-and-test": "^1.7.12",
     "webpagetest": "^0.3.9"
   },
   "keywords": [
@@ -104,7 +104,10 @@
     "alias:prod": "now alias --token=$NOW_TOKEN --local-config=./now.prod.json",
     "lighthouse": "lighthouse-ci https://jcofman.now.sh --score=90 --performance=85 --pwa=90 --accessibility=90 --best-practice=90 --seo=90",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build:storybook": "build-storybook",
+    "deploy:storybook": "now ./storybook-static --local-config=../now.storybook.json",
+    "alias:storybook": "now alias --token=$NOW_TOKEN --local-config=./now.storybook.json",
+    "build-deploy-and-alias-storybook": "npm-run-all -s build:storybook deploy:storybook alias:storybook"
   },
   "bundlesize": [
     {
