--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
 .cache/
+
 # Build directory
+storybook-static/
 public/
 .DS_Store
 yarn-error.log
